migrate to typescript

--- a/examples/worker/index.html
+++ b/examples/worker/index.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<meta charset="utf-8">
-			<title>SRC Benchmarks</title>
+			<title>SRC Worker Example</title>
 		</head>
 	<body>
 		<div id="root"></div>
