--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -29,9 +29,7 @@
 		
 		// init sample rate converter
 		var src;
-		LibSampleRate.create(2, 44100, 44100, {
-			wasmPath: '/dist/libsamplerate.wasm'
-		}).then((_src) => src = _src);
+		LibSampleRate.create(2, 44100, 44100).then((_src) => src = _src);
 
 		// load a .wav file
 		var reader = new FileReader();
